[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/angelica/DJ/Track.gd" type="Script" id=2]
[ext_resource path="res://addons/angelica/DJ/Notes.gd" type="Script" id=3]
[ext_resource path="res://addons/angelica/DJ/DJmono.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 0.258824, 0.352941, 0.776471 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0, 0.0705882, 0.0980392, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFontData" id=2]
font_path = "res://addons/angelica/fonts/OpenSans-Light.ttf"

[sub_resource type="DynamicFont" id=3]
size = 17
outline_size = 1
outline_color = Color( 0, 0.458824, 0.733333, 1 )
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.0941176, 0.121569, 0.423529 )
border_width_left = 1
border_width_right = 1
border_color = Color( 0.494118, 0.941176, 1, 0.976471 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 6.0
content_margin_right = 6.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.529412, 1, 0.976471, 0.52549 )
border_blend = true

[node name="Track" type="Node2D"]
position = Vector2( -0.224503, -0.831635 )
script = ExtResource( 2 )
superbutton = ExtResource( 1 )

[node name="line" type="Panel" parent="."]
margin_top = -1.0
margin_right = 625.0
margin_bottom = 33.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
margin_left = 322.607
margin_top = 3.0
margin_right = 419.607
margin_bottom = 28.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[url=kenney][img]res://addons/angelica/images/16/1f3ae.png[/img][/url] [url=kylan][img]res://addons/angelica/images/16/1f3ba.png[/img][/url] [url=openpath1][img]res://addons/angelica/images/16/1f941.png[/img][/url]"
text = "  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu2" type="RichTextLabel" parent="."]
visible = false
margin_left = 307.558
margin_top = -11.0093
margin_right = 474.558
margin_bottom = 15.9907
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[url=play beat]Play[/url] [url=add beat]Add [/url] [url=copy]Copy[/url] [url=paste]Paste[/url]"
text = "Play Add  Copy Paste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notes" type="RichTextLabel" parent="."]
margin_left = 456.0
margin_top = 3.0
margin_right = 618.0
margin_bottom = 31.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[url=a]a[/url] [url=b]b [/url] [url=C]C[/url][url=p]p[/url]"
text = "a b  Cp"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Notes"]

[node name="Agulha" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="Agulha"]
margin_left = 153.0
margin_top = 4.0
margin_right = 163.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 147.607
margin_top = 4.0
margin_right = 314.607
margin_bottom = 28.0
hint_tooltip = "Type 16 beats here"
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.431373, 1, 0.827451, 1 )
max_length = 16
clear_button_enabled = true
placeholder_text = "Type your 16 beats!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedTune" type="SpinBox" parent="."]
modulate = Color( 0.49, 1.17, 1.16, 1 )
margin_left = 56.2645
margin_top = 4.8909
margin_right = 130.265
margin_bottom = 28.8909
hint_tooltip = "BPM (press enter after change)"
max_value = 900.0
value = 130.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loop" type="CheckBox" parent="."]
margin_left = 402.607
margin_top = 4.65687
margin_right = 426.607
margin_bottom = 28.6569
hint_tooltip = "Looping"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playing" type="CheckBox" parent="."]
margin_left = 429.663
margin_top = 4.65687
margin_right = 453.663
margin_bottom = 28.6569
hint_tooltip = "Playing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSlider" type="VSlider" parent="."]
modulate = Color( 0.94, 2.15, 1.98693, 1 )
margin_left = 130.071
margin_top = 1.0
margin_right = 146.071
margin_bottom = 31.0
min_value = -40.0
max_value = 0.0
step = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer11" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer12" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer13" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer14" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer15" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer16" type="AudioStreamPlayer" parent="."]

[connection signal="tree_exiting" from="." to="." method="_on_Beat1_tree_exiting"]
[connection signal="meta_clicked" from="Menu" to="." method="_on_Menu_meta_clicked"]
[connection signal="meta_clicked" from="Menu2" to="." method="_on_Menu_meta_clicked"]
[connection signal="meta_clicked" from="Notes" to="." method="_on_Notes_meta_clicked"]
[connection signal="meta_clicked" from="Notes" to="Notes" method="_on_Notes_meta_clicked"]
[connection signal="meta_hover_started" from="Notes" to="." method="_on_Notes_meta_hover_started"]
[connection signal="meta_hover_started" from="Notes" to="Notes" method="_on_Notes_meta_hover_started"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="value_changed" from="SpeedTune" to="." method="_on_SpeedTune_value_changed"]
[connection signal="pressed" from="Loop" to="." method="_on_Loop_pressed"]
[connection signal="pressed" from="Playing" to="." method="_on_Playing_pressed"]
[connection signal="value_changed" from="VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
